gccida/c0/schedule_block
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/schedule_block/src/haifa-sched.c:2139:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
tail = ( rtx)current_sched_info->next_tail[1]; 
             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/schedule_block/src/haifa-sched.c:2258:29: error: use of undeclared identifier 'arg0'
print_block_visualization( &arg0); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/schedule_block/src/haifa-sched.c:2266:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
for ( note_head = note_list; note_head[1]; note_head = ( rtx)note_head[1] ) 
^                            ~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/schedule_block/src/haifa-sched.c:2266:62: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( note_head = note_list; note_head[1]; note_head = ( rtx)note_head[1] ) 
                                                             ^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/schedule_block/src/haifa-sched.c:2268:27: error: assigning to 'uint64' (aka 'unsigned long long') from incompatible type 'struct rtx_def'
*( _QWORD *)&note_head[1] = heada[1]; 
                          ^ ~~~~~~~~
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/schedule_block/src/obj/haifa-sched.o] Error 1
